# nb_cmd

./: .gitignore  README.md  git_nb_cmd.py  nb_cmd_all_docs_and_codes.md  nb_cmd_vs_click_vs_typer.md  pub_pypi_nb_cmd.py  pyproject.toml  setup.py
examples/: bigone_cmd.py  demo_advanced.py  demo_basic.py  demo_full.py  demo_inherit.py  demo_most_easy.py  demo_nb_log.py  demo_subcommands.py  five_in_one_demo.py  five_in_one_demo_doc.md
examples/git_demos/: README.md  git_click.py  git_nb_cmd.py
examples/github_cli_demos/: gh_click.py  gh_comparison.md  gh_nb_cmd.py  gh_nb_cmd_gen_doc.md  gh_typer.py
examples/nbctx_demo/: nbctx_demo.py  nbctx_demo_gen_doc.md
nb_cmd/: __init__.py  cli.py
nb_cmd/core/: _io_dispatch.py  arg.py  base.py  discovery.py  gen_cmd.py  meta.py  parser.py  result_handler.py  type_utils.py
nb_cmd/modes/: api_mode.py  cli_mode.py  tui_mode.py  web_mode.py
nb_cmd/ui/: colors.py  helper.py  progress.py  table.py
nb_cmd/utils/: config.py  validators.py
tests/ai_codes/: fix_exec_format.py  fix_exec_prefix.py  insert_win11_commands.py  print_many.py  screenshot.py  test_always_show.py  test_annotated.py  test_blur.py  test_cancel.py  test_collapse.py  test_debug.py  test_debug2.py  test_debug3.py  test_direct_nbctx.py  test_dropdown.py  test_dual.py  test_enable_exec.py  test_enable_exec_cli.py  test_enable_exec_default.py  test_exec_all_modes.py  test_fixed.py  test_io_dispatch.py  test_panel.py  test_param.py  test_persist.py  test_select2.py  test_select2_debug.py  test_sqlite.py  test_thread_local_writer.py
tests/ai_codes/ai_demos/: stress_test_app.py
tests/ai_codes/regression_testing/: test_allow_method_list.py  test_dual_mode_args.py  test_exec_order.py  test_hide_timeout_auth.py  test_nbctx.py  test_tui_mode.py
tests/ai_codes/testnbcmds/: test_all_features.py
tests/ai_docs/: ai_update.md  nb_cmd_vs_click_vs_typer.md  tui_mode_plan.md
tests/for_ai/: nb_cmd_designe.md  nb_cmd_designe原稿.md
tests/mytests/: t1.py
