[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nb-cmd"
version = "0.2.1"
description = "万能接口生成器——你写一个 Python class，自动获得 CLI + REST API + Web UI + TUI 终端交互 + Python 直接调用 五种操作方式，堪称python界低代码平台"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
authors = [
    {name = "ydf", email = "ydf0509@sohu.com"},
]
keywords = ["cli", "api", "webui", "tui", "command", "argparse", "fastapi", "textual"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",

    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[project.optional-dependencies]
api = ["fastapi>=0.68.0", "uvicorn>=0.15.0", "pydantic>=1.8.0"]
web = ["fastapi>=0.68.0", "uvicorn>=0.15.0", "websockets>=10.0"]
tui = ["textual>=1.0.0"]
all = ["fastapi>=0.68.0", "uvicorn>=0.15.0", "pydantic>=1.8.0", "websockets>=10.0", "textual>=1.0.0"]
nb = ["nb_log"]

[project.scripts]
nbcmd = "nb_cmd.cli:main"

[project.urls]
Homepage = "https://github.com/ydf0509/nb_cmd"

[tool.setuptools.packages.find]
include = ["nb_cmd*"]

[tool.setuptools.package-data]
nb_cmd = ["ui/static/**/*"]
